--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,15 +6,16 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
               integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
               crossorigin="anonymous">
+        <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
     <header>
         <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">QR трекер доументов</a>
+            <a class="navbar-brand t1" href="/">QR трекер доументов</a>
             {% if current_user.is_authenticated %}
             <div class="menu-btn">
                 <a class="btn btn-dark" href="\lms">Личный кабинет</a>
-                <a class="btn btn-outline-secondary" href="\groups">Группы</a>
+                <a class="btn btn-outline-secondary" href="\logout">Выйти</a>
             </div>
             {% else %}
             <div class="menu-btn">
